# cmake_minimum_required(VERSION <specify CMake version here>)
project(cpp_tutorial)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_tutorial main.cpp add/test.h add/test.cpp mainalternatives/cppfiles/mymain.cpp mainalternatives/headers/mymain.h mainalternatives/cppfiles/variables.cpp mainalternatives/headers/variables.h mainalternatives/cppfiles/arrays.cpp mainalternatives/headers/arrays.h mainalternatives/cppfiles/pointers.cpp mainalternatives/headers/pointers.h mainalternatives/cppfiles/functions.cpp mainalternatives/headers/functions.h mainalternatives/headers/oop/Student.h mainalternatives/headers/oop/Animal.h mainalternatives/cppfiles/oop/Animal.cpp mainalternatives/headers/oop/Lion.h mainalternatives/cppfiles/oop/Lion.cpp mainalternatives/cppfiles/oop/Student.cpp mainalternatives/cppfiles/oop.cpp mainalternatives/headers/oop.h mainalternatives/cppfiles/memory.cpp mainalternatives/headers/memory.h)